@@ -62,7 +62,7 @@
               </td>
             {% endif %}
             <td>
-              <input type='text' name='nom[{{ d.number }}]' value='{{ d.name | raw }}'  class='c350'/>
+              <input type='text' name='nom[{{ d.number }}]' value='{{ d.name }}'  class='c350'/>
             </td>
             <td>
               <input type='text' name='commentaire[{{ d.number }}]' value='{{ d.comment }}'  class='c350'/>
